--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,8 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-
-# Other #
-#########
-
-*.user
-*.suo
-*.sdf
-*.opensdf
-externals/
-build/
-out/
-bin/
-ipch/
-docs/html/
-docs/latex/
-libbsa-tester.txt
+build/Release/
+build/Debug/
+build/loadorder32.dir/Debug/
+build/loadorder32.dir/Release/
+build/tests.dir/Debug/
+build/tests.dir/Release/
+build/Win32/Debug/ZERO_CHECK/
+build/Win32/Release/ZERO_CHECK/
